# iTRSsVisualised

./: .gitignore  DrawMouseSquare.hs  DrawReduction.hs  DynamicOmegaReduction.hs  DynamicOmegaReductions.hs  DynamicReduction.hs  Environment.hs  ExampleReduction.hs  ExampleReduction2.hs  ExampleReductions.hs  README  Setup.lhs  Utilities.hs  compile.txt  node.ai  vis2.hs  visualization.cabal  visualization.hs
