Name:          Visualization
Version:       0.1
Cabal-Version: >= 1.6
Author:        Jeroen Ketema
License:       OtherLicense
Synopsis:      Primitive visualization of infinite reductions
Category:      Tools
Build-Type:    Simple
Stability:     Alpha
Tested-With:   GHC == 7.4.1
Data-Files:
        node.png,
        fonts/*.ttf


Executable visualization
    Build-Depends:
        array,
        base == 4.*,
        bitmap-opengl == 0.0.0.1,
        directory,
        filepath,
        FTGL == 1.333,
        GLUT >= 2.1,
        OpenGL >= 2.2,
        plugins >= 1.5,
        random,
        stb-image == 0.2.*
    Main-Is: visualization.hs
    HS-Source-Dirs: ., ..
    GHC-Options: -Wall
